--- a/example.html
+++ b/example.html
@@ -2,8 +2,11 @@
 <body>
     <h1>Hi, {name}!</h1>
 
+	<ul>
     { for i=names  }
-        Also {i}
+        <li>Also {i}: { for j=help  }{j}{endfor}</li>
+
     {endfor}
+	</ul>
 </body>
 </html>
